PEH-16813-Defect for PP 1.0 GSK: UI Issue(Android): Help menu drop list item overlaps-Commit 2

--- a/force-app/main/community-pages-common/aura/HelpTopics/HelpTopics.css
+++ b/force-app/main/community-pages-common/aura/HelpTopics/HelpTopics.css
@@ -137,7 +137,7 @@
 
 /* style for the dropdown box */
 .THIS .dropdown-menu {
-    width: 300px;
+    width: 100%;
     height: 300px;
     overflow-y: scroll;
     margin: 0;
